final commit done Ebook in CMP

--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EBookCmp</string>
+    <string name="search_results">Search Results</string>
+    <string name="favorites">Favorites</string>
 </resources>
